--- a/builds/any/rootfs/stretch/common/amd64-base-packages.yml
+++ b/builds/any/rootfs/stretch/common/amd64-base-packages.yml
@@ -13,6 +13,7 @@
 - onl-kernel-4.14-lts-x86-64-all-modules
 - onl-kernel-4.19-lts-x86-64-all-modules
 - onl-kernel-5.4-lts-x86-64-all-modules
+- onl-kernel-6.1-lts-x86-64-all-modules
 - efibootmgr
 - gdisk
 - acpid
