--- a/packages/base/all/vendor-config-onl/src/lib/platform-config-defaults-x86-64.yml
+++ b/packages/base/all/vendor-config-onl/src/lib/platform-config-defaults-x86-64.yml
@@ -44,6 +44,10 @@ default:
       =: kernel-5.4-lts-x86_64-all
       package: onl-kernel-5.4-lts-x86-64-all:amd64
 
+    kernel-6.1: &kernel-6-1
+      =: kernel-6.1-lts-x86_64-all
+      package: onl-kernel-6.1-lts-x86-64-all:amd64
+
     # pick one of the above kernels
     kernel:
       <<: *kernel-3-16
