--- a/packages/base/amd64/upgrade/PKG.yml
+++ b/packages/base/amd64/upgrade/PKG.yml
@@ -5,6 +5,7 @@ prerequisites:
       - onl-kernel-4.14-lts-x86-64-all:amd64
       - onl-kernel-4.19-lts-x86-64-all:amd64
       - onl-kernel-5.4-lts-x86-64-all:amd64
+      - onl-kernel-6.1-lts-x86-64-all:amd64
       - onl-loader-initrd:amd64
     stage: 3
 
