--- a/packages/base/amd64/upgrade/builds/Makefile
+++ b/packages/base/amd64/upgrade/builds/Makefile
@@ -6,6 +6,7 @@ $(eval $(call onlpm_find_file_add,X,onl-kernel-4.9-lts-x86-64-all:amd64,kernel-4
 $(eval $(call onlpm_find_file_add,X,onl-kernel-4.14-lts-x86-64-all:amd64,kernel-4.14-lts-x86_64-all,FILES))
 $(eval $(call onlpm_find_file_add,X,onl-kernel-4.19-lts-x86-64-all:amd64,kernel-4.19-lts-x86_64-all,FILES))
 $(eval $(call onlpm_find_file_add,X,onl-kernel-5.4-lts-x86-64-all:amd64,kernel-5.4-lts-x86_64-all,FILES))
+$(eval $(call onlpm_find_file_add,X,onl-kernel-6.1-lts-x86-64-all:amd64,kernel-6.1-lts-x86_64-all,FILES))
 
 # Loader initrd and manifest -> $FILES
 $(eval $(call onlpm_find_file_add,X,onl-loader-initrd:amd64,onl-loader-initrd-amd64.cpio.gz,FILES))
