--- a/packages/base/any/kernels/6.1-lts/configs/x86_64-all/x86_64-all.config
+++ b/packages/base/any/kernels/6.1-lts/configs/x86_64-all/x86_64-all.config
@@ -1533,7 +1533,7 @@ CONFIG_BLK_DEV_NVME=y
 #
 # EEPROM support
 #
-CONFIG_EEPROM_AT24=m
+CONFIG_EEPROM_AT24=y
 # CONFIG_EEPROM_LEGACY is not set
 # CONFIG_EEPROM_MAX6875 is not set
 # CONFIG_EEPROM_93CX6 is not set
@@ -2855,7 +2855,7 @@ CONFIG_SENSORS_JC42=m
 # CONFIG_SENSORS_LM63 is not set
 # CONFIG_SENSORS_LM73 is not set
 CONFIG_SENSORS_LM75=y
-# CONFIG_SENSORS_LM77 is not set
+CONFIG_SENSORS_LM77=y
 # CONFIG_SENSORS_LM78 is not set
 # CONFIG_SENSORS_LM80 is not set
 # CONFIG_SENSORS_LM83 is not set
