--- a/packages/platforms/accton/x86-64/as4630-54te/modules/builds/Makefile
+++ b/packages/platforms/accton/x86-64/as4630-54te/modules/builds/Makefile
@@ -1,5 +1,5 @@
-KERNELS := onl-kernel-4.19-lts-x86-64-all:amd64
-KMODULES := $(wildcard *.c)
+KERNELS := onl-kernel-6.1-lts-x86-64-all:amd64
+KMODULES := src
 VENDOR := accton
 BASENAME := x86-64-accton-as4630-54te
 ARCH := x86_64
