--- a/packages/platforms/accton/x86-64/as7712-32x/modules/builds/Makefile
+++ b/packages/platforms/accton/x86-64/as7712-32x/modules/builds/Makefile
@@ -1,5 +1,5 @@
-KERNELS := onl-kernel-4.14-lts-x86-64-all:amd64
-KMODULES := $(wildcard *.c)
+KERNELS := onl-kernel-6.1-lts-x86-64-all:amd64
+KMODULES := src
 VENDOR := accton
 BASENAME := x86-64-accton-as7712-32x
 ARCH := x86_64
