[Accton] Modify the kernel 6.1 config file
1. let both CONFIG_I2C_I801=y and CONFIG_I2C_ISMT=y

Signed-off-by: Alex Lai <alex_lai@accton.com>

--- a/packages/base/any/kernels/6.1-lts/configs/x86_64-all/x86_64-all.config
+++ b/packages/base/any/kernels/6.1-lts/configs/x86_64-all/x86_64-all.config
@@ -2572,7 +2572,7 @@ CONFIG_I2C_ALGOBIT=y
 # CONFIG_I2C_AMD_MP2 is not set
 CONFIG_I2C_I801=y
 CONFIG_I2C_ISCH=y
-CONFIG_I2C_ISMT=m
+CONFIG_I2C_ISMT=y
 # CONFIG_I2C_PIIX4 is not set
 # CONFIG_I2C_NFORCE2 is not set
 # CONFIG_I2C_NVIDIA_GPU is not set
