--- a/packages/base/any/kernels/6.1-lts/configs/x86_64-all/x86_64-all.config
+++ b/packages/base/any/kernels/6.1-lts/configs/x86_64-all/x86_64-all.config
@@ -2955,7 +2955,7 @@ CONFIG_SENSORS_UCD9000=y
 # CONFIG_SENSORS_TMP102 is not set
 # CONFIG_SENSORS_TMP103 is not set
 # CONFIG_SENSORS_TMP108 is not set
-# CONFIG_SENSORS_TMP401 is not set
+CONFIG_SENSORS_TMP401=y
 # CONFIG_SENSORS_TMP421 is not set
 # CONFIG_SENSORS_TMP464 is not set
 # CONFIG_SENSORS_TMP513 is not set
