--- a/packages/platforms/accton/x86-64/as7926-40xfb/modules/builds/src/Makefile
+++ b/packages/platforms/accton/x86-64/as7926-40xfb/modules/builds/src/Makefile
@@ -1,3 +1,4 @@
+obj-m += accton_ipmi_intf.o
 obj-m += x86-64-accton-as7926-40xfb-cpld.o
 obj-m += x86-64-accton-as7926-40xfb-fan.o
 obj-m += x86-64-accton-as7926-40xfb-leds.o
