--- a/packages/platforms/accton/x86-64/as9926-24db/modules/builds/src/Makefile
+++ b/packages/platforms/accton/x86-64/as9926-24db/modules/builds/src/Makefile
@@ -1,3 +1,4 @@
+obj-m += accton_ipmi_intf.o
 obj-m += x86-64-accton-as9926-24db-fan.o
 obj-m += x86-64-accton-as9926-24db-leds.o
 obj-m += x86-64-accton-as9926-24db-psu.o
