--- a/packages/platforms/accton/x86-64/as9817-64/src/modules/Makefile
+++ b/packages/platforms/accton/x86-64/as9817-64/src/modules/Makefile
@@ -1,3 +1,4 @@
+obj-m += accton_ipmi_intf.o
 obj-m += x86-64-accton-as9817-64-fan.o
 obj-m += x86-64-accton-as9817-64-fpga.o
 obj-m += x86-64-accton-as9817-64-i2c-ocores.o
