--- a/packages/platforms/accton/x86-64/as7535-28xb/modules/builds/src/Makefile
+++ b/packages/platforms/accton/x86-64/as7535-28xb/modules/builds/src/Makefile
@@ -1,3 +1,4 @@
+obj-m += accton_ipmi_intf.o
 obj-m += x86-64-accton-as7535-28xb-cpld.o
 obj-m += x86-64-accton-as7535-28xb-fan.o
 obj-m += x86-64-accton-as7535-28xb-fpga.o
